Fixed white gap when grid size is 64

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-body{
-    white-space: 0;
+body > *{
+    white-space: 0px;
 }
